# feed-telebot

./: .env  .gitignore  Dockerfile  README.md  app.py  config.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
data/: feeds_src.json
feedbot/: bot.py  database.py  error_handlers.py  feed_getters.py  handlers.py  messages.py  utils.py
tests/: conftest.py  test_app.py  test_feed_srcs.py
