[tool.poetry]
name = "feedbot"
version = "0.1.0"
description = "Bot to send news feed from your favorite sources to your telegram account."
authors = ["cRyp70s <matthewwisdom11@gmail.com>"]
license = "MIT"
repository = ""

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
Telethon = "^1.24.0"
feedparser = "^6.0.10"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
SQLAlchemy = "^1.4.36"
python-dotenv = "^0.21.0"
async-timeout = "^4.0.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
